# project_aura_Legacy

./: .gitignore  LICENSE  Makefile  README.md  audio_aura.py  project_aura.py  project_aura_zh.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
260415_2240_record/: 260415_2240_record.txt
260416_2157__with_Prof_Wu_Tomi/: 260416_2157__with_Prof_Wu_Tomi (GPT).txt  260416_2157__with_Prof_Wu_Tomi.txt
260422_1032_record/: 260422_1032_record.txt
260422_1415_114-2 生成式AI應用系統與工程 W9_1150422/: 260422_1415_114-2 生成式AI應用系統與工程 W9_1150422.txt
260512_1302_record/: 260512_1302_record.txt
260512_2224_record/: 260512_2224_record.txt
docs/: architecture_decisions.md  denoise_upgrade_plan.md  legacy_audio_assistant_v1.5.0.py  refactor_plan.md  versioning.md
scripts/: bump_version.py
src/aura/: __init__.py  __main__.py  app.py  config.py  metadata.py  settings.py
src/aura/asr/: file_pipeline.py  threads.py
src/aura/audio/: capture.py  denoise.py  export.py  splitter.py  splitter_pipeline.py
src/aura/diarization/: __init__.py  pyannote_pipeline.py  speaker_assignment.py
src/aura/llm/: __init__.py  summary.py  threads.py
src/aura/system/: cuda.py  native_audio.py  runtime_paths.py  update_checker.py
src/aura/ui/: main_window.py  messages.py  (+2 more)
tests/: test_audio_export.py  test_bump_version.py  test_denoise.py  test_file_pipeline.py  test_gpu_policy.py  test_imports.py  test_prompt_defaults.py  test_runtime_paths.py  test_settings.py  test_speaker_assignment.py  test_splitter_pipeline.py  test_summary.py  test_update_checker.py  test_versioning.py
